--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Countdown timer</title>
     <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="css/02-timer.css">
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
 
-    <input type="text" id="datetime-picker" />
-    <button type="button" data-start>Start</button>
+    <div class="input_button">
+      <input type="text" id="datetime-picker" />
+      <button type="button" data-start disabled>Start</button>
+    </div>
 
     <div class="timer">
       <div class="field">
